# student-course-management-lab

./: .gitignore  README.md  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_STRUCTURES.md  FILE_FORMAT.md  README.md  TESTING.md
student_management/: main.py
student_management/data/: file_handler.py
student_management/models/: course.py  enrollment.py  student.py
student_management/services/: course_service.py  enrollment_service.py  student_service.py
student_management/ui/: cli.py
tests/: test_cli.py  test_course.py  test_course_service.py  test_enrollment.py  test_enrollment_service.py  test_file_handler.py  test_student.py  test_student_service.py
