[tool.poetry]
name = "student-course-management-lab"
version = "0.1.0"
description = "A Python-based Student Course Management System for managing student information, course enrollments, and grades"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "student_management"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
student-management = "student_management.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
